# Vigil

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  conan_provider.cmake  conandata.yml
.github/workflows/: c-cpp.yml  cmake-multi-platform.yml  cmake-single-platform.yml
Generator/: CMakeLists.txt
Generator/Source/: Main.cpp  Main.h
Generator/Source/Compiler/: ClangUtils.cpp  ClangUtils.h  Compiler.cpp  Compiler.h
Generator/Source/Compiler/Builder/: ClassBuilder.cpp  ClassBuilder.h  FieldBuilder.cpp  FieldBuilder.h  TypeBuilder.h
Generator/Source/Compiler/Io/: Log.cpp  Log.h
Generator/Source/Compiler/Specification/: BaseSpec.h
Parser/: ParseFile.py  Reflect.py
Source/: Vigil.cpp  Vigil.h
Source/Common/Base/: BaseDefs.h
Source/Common/Container/: Array.h  FixedArray.h  SimplePair.h
Source/Common/Exception/: ValueNotFound.h
Source/Common/ObjectModel/: Class.h  Object.cpp  Object.h
Source/Common/ObjectModel/Reflection/: Class.cpp  Class.h  ClassEnum.h  ClassMember.h  ClassMethod.h  EnumValue.h  ObjectReader.h  ObjectWriter.h
Source/Common/ObjectModel/Reflection/Reader/: JsonReader.cpp  JsonReader.h
Source/Common/ObjectModel/Reflection/Writer/: JsonWriter.cpp  JsonWriter.h
Source/Common/System/: Crc32.h
UnitTest/: CMakeLists.txt  UnitTest.cpp  UnitTest.h  UnitTest.tmp
